# SugarCrash

./: Build Release (.exe only).bat  Build Release.bat  CMakeLists.txt  LICENSE  README.md
java/: CMakeLists.txt
java/jni/: native.c
java/omg/alcoloid/sugarcrash/: SugarCrash.java
java/org/bukkit/plugin/java/: JavaPlugin.java
resources/: plugin.yml.in  resources.rc
src/: CMakeLists.txt  sugarcrash.c  sugarcrash.h  sugarhsv.c  sugarntdecl.h  sugarscreen.c  sugarsystem.c
src/executable/: main.c
